[tool.poetry]
name = "zoomdashboard"
version = "0.1.0"
description = ""
authors = ["tsudo <tsudonymn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
assertpy = "^1.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
